Fix stories z-index issues with notif popup

--- a/app.css
+++ b/app.css
@@ -205,7 +205,7 @@ main .container {
   color: var(--color-gray);
 }
 .menu-item.active {
-  background-color: var(--color-light);
+  background-color: var(--color-secondary);
 }
 
 .left .sidebar .active box-icon,
@@ -230,6 +230,9 @@ main .container {
 }
 
 .menu-item:first-of-type {
+  overflow: hidden;
+}
+.menu-item:last-of-type {
   overflow: hidden;
 }
 
@@ -283,7 +286,7 @@ main .container {
   border-radius: var(--card-border-radius);
   padding: var(--card-padding);
   box-shadow: 0 0 2rem hsl(var(--color-primary), 75% 60% 25%);
-  z-index: 8;
+  z-index: 20;
   display: flex;
   flex-direction: column;
   gap: 2rem;
@@ -326,7 +329,7 @@ main .container {
   color: var(--color-white);
   font-size: 1.4rem;
   width: 100%;
-  position: relative;
+  /* position: relative; */
   overflow: hidden;
 }
 
